src/test/ui-fulldeps/invalid-punct-ident-2.stderr
error: proc macro panicked
  --> $DIR/invalid-punct-ident-2.rs:6:1
   |
LL | invalid_ident!(); //~ ERROR proc macro panicked
   | ^^^^^^^^^^^^^^^^^
   |
   = help: message: `"*"` is not a valid identifier

error: aborting due to previous error

